--- a/sass/components/_card.scss
+++ b/sass/components/_card.scss
@@ -16,6 +16,8 @@
     bottom: 30%;
     right: -55%;
     width: 50%;
+    background-color: $card-grey;
+    padding: 2rem;
 }
 
 .card {
