--- a/sass/layout/_column-layouts.scss
+++ b/sass/layout/_column-layouts.scss
@@ -1,7 +1,5 @@
 .heading-information {
     margin-bottom: 4rem;
-    background-color: $card-grey;
-    padding: 2rem;
     &__title {
         margin-bottom: 0.5rem;
     }
